# pysphalt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: publish_to_pypi_and_testpypi.yml  ruff.yml
docs/: conf.py  docs-requirements.txt  index.rst
docs/source/: conf.py  index.rst
docs/source/api/: models.rst  multiplication.rst
pysphalt/: model.pkl  models.py  multiplication.py  schemas.py
pysphalt/pickle_models/: asphalt_modulus_predictor.pkl
