[metadata]
name = pysphalt
version = 0.1.0
author = Rodrigo Castanon
author_email = rodrigo.castanon@poli.ufrj.br
description = Biblioteca de modelos descritivos e preditivos de dados de materiais asfálticos brasileiros
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://pysphalt.readthedocs.io
project_urls =
    Bug Tracker = https://github.com/pysphalt/pysphalt/issues
    repository = https://github.com/pysphalt/pysphalt
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pysphalt
packages = find:
python_requires = >=3.10

[options.packages.find]
where = pysphalt
